
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef scalar_t__ u_int32_t ;
typedef int u_int16_t ;
struct icmphdr {int dummy; } ;


 scalar_t__ ICMP_HDRLEN ;
 scalar_t__ IP_MAXPACKET ;
 char* Malloc (scalar_t__) ;
 int free (char*) ;
 int icmp_header (struct icmphdr*,char*,scalar_t__) ;
 int send_ip4 (int ,scalar_t__,char*,int ) ;

void send_icmp(uint32_t id,u_int32_t size,char * data,u_int16_t frag_off) {

  char * pkt = Malloc(IP_MAXPACKET);
  struct icmphdr * icmp = (struct icmphdr * )(pkt);

  if(!data)
      data = Malloc(size);
  icmp_header(icmp,data,size);

  u_int32_t len = ICMP_HDRLEN + size;
  send_ip4(id,len,pkt,frag_off);
  free(pkt);
 }
